--- a/17- Movie UI/style.css
+++ b/17- Movie UI/style.css
@@ -25,10 +25,11 @@ nav {
     height: 6%;
     position: fixed;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     top: 0;
-    padding-right: 16px;
+    padding-right: 20px;
+    padding-left: 32px;
 }
 
 .search {
@@ -54,9 +55,7 @@ nav {
 }
 
 .movie-box {
-    border: 2px solid black;
-    width: 240px;
-    height: 340px;
+    width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,33 +64,29 @@ nav {
     position: relative;
     overflow: hidden;
     box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.4);
-    margin: 8px;
+    margin: 1rem;
 }
 
-.movie-photo {
-    background-color: black;
-    border-radius: 10px;
+.movie-box img {
     width: 100%;
-    height: 80%;
-    margin-bottom: 12px;
 }
 
 .text {
     display: flex;
-    width: 100%;
     justify-content: space-between;
-    font-size: 12px;
-    padding: 08px;
+    width: 100%;
+    font-size: 13px;
+    padding: 0.5rem 1rem 1rem;
 }
 
 .movie-name {
-    background-color: rgb(57, 85, 109);
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 8px;
     border-radius: 4px;
+    max-width: 75%;
 }
 
 .movie-point {
