--- a/38-Verify Account/style.css
+++ b/38-Verify Account/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #3b3b98;
+  background-color: #611574;
   color: #fff;
   font-family: 'Muli', sans-serif;
   display: flex;
@@ -18,69 +18,50 @@ body {
   margin: 0;
 }
 
-h2 {
-  margin: 10px 0 20px;
-  text-align: center;
-}
-
 .container {
-  background-color: #23235b;
-  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
-  padding: 20px;
-  width: 350px;
-  max-width: 100%;
-}
-
-.result-container {
-  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  text-align: center;
   align-items: center;
-  position: relative;
-  font-size: 18px;
-  letter-spacing: 1px;
-  padding: 12px 10px;
-  height: 50px;
-  width: 100%;
+  padding: 120px 60px;
+  border: 4px solid rgb(208, 208, 208);
+  border-radius: 18px;
 }
 
-.result-container #result {
-  word-wrap: break-word;
-  max-width: calc(100% - 40px);
-  overflow-y: scroll;
-  height: 100%;
-}
-
-#result::-webkit-scrollbar {
-  width: 1rem;
-}
-
-.result-container .btn {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width: 40px;
-  height: 40px;
-  font-size: 20px;
-}
-
-.btn {
-  border: none;
-  background-color: #3b3b98;
-  color: #fff;
-  font-size: 16px;
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
-.btn-large {
-  display: block;
-  width: 100%;
-}
-
-.setting {
+.digits {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 15px 0;
+  margin-top: 20px;
+}
+
+.digit {
+  border: 2px #c6c6c6 solid;
+  width: 90px;
+  height: 120px;
+  margin: 8px;
+  background-color: transparent;
+  border-radius: 8px;
+  font-size: 32px;
+  text-align: center;
+  transition: 0.3s all ease-in;
+  color: white;
+box-shadow: 0 2px 8px rgba(55, 55, 55, 0.4);
+}
+
+.digit::-webkit-inner-spin-button,
+.digit::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.digit:focus {
+  outline: 0;
+  scale: 1.05;
+}
+
+.info {
+  margin-top: 40px;
+  font-size: 14px;
+  background-color: rgba(190, 60, 192, 0.396);
+  padding: 6px;
+  border-radius: 8px;
 }
