--- a/13- Random Choice Picker/style.css
+++ b/13- Random Choice Picker/style.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     justify-content: center;
     overflow-x: hidden;
-    background-color: rgb(0, 71, 157);
+    background-color: rgb(37, 91, 156);
     color: #fff;
 }
 
@@ -33,6 +33,8 @@ textarea {
     font-size: 18px;
     color: black;
     outline: 0;
+    padding: 8px;
+    border-radius: 8px;
 }
 
 .description {
@@ -44,13 +46,14 @@ textarea {
 }
 
 .choice {
-    background-color: #ffffff7e;
+    background-color: #3789d17e;
     border-radius: 8px;
     padding: 10px;
-    margin: auto 3px;
-    color: black;
+    margin: auto 4px;
+    color: white;
 }
 
 .highlight {
     background-color: #fff;
+    color: black;
 }
